// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches $caps snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={13}
    fontWeight={400}
    justification="left"
    padding={8}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "textAlign": "left",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches H1 snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={24}
    fontWeight={400}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 24,
          "fontWeight": "400",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches H2 snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={18}
    fontWeight={700}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 18,
          "fontWeight": "700",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches H3 snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={15}
    fontWeight={400}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 15,
          "fontWeight": "400",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches H4 snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={13}
    fontWeight={400}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches H5 snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="grey"
    fontSize={13}
    fontWeight={400}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#8B8B8B",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches Label snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={13}
    fontWeight={700}
    justification="left"
    padding={3}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 13,
          "fontWeight": "700",
          "paddingBottom": 3,
          "paddingLeft": 3,
          "paddingRight": 3,
          "paddingTop": 3,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches P snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    color="dark"
    fontSize={13}
    fontWeight={400}
    justification="left"
    padding={8}
    style={
      Array [
        Object {
          "color": "#1D1F2A",
          "flexDirection": "row",
          "fontFamily": "Raleway",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "textAlign": "left",
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;
